# GenerativeAIExamples

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamlfmt  .yamllint  Building_a_Simple_AI_Agent_with_Qwen3_Next_powered_by_NVIDIA_NIM.ipynb  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE-3rd-party.txt  LICENSE.DATA  LICENSE.md  Llama_Nemotron_VL_8B.ipynb  README.md  README_ARCHIVED.md  SECURITY.md  STRUCTURE.md  demo_model_extractor.py  frontend.html  index.html  multi-gpu.html  package-lock.json  package.json  print_env.sh  requirements.txt  search.html  searchindex.js  start_all.sh  support-matrix.html  temp.txt  test_calculator_output.py  test_llama3_inference.py  test_memory_calc_debug.py  test_memory_calculation.py  test_memory_calculation_fix.py  test_model_name_extractor.py  test_model_tag_flow.py  test_sentence_transformers.py  test_vllm_polling.py
community/autonomous_5g_slicing_lab/llm-slicing-5g-lab/extra_files/: CMakeLists.txt  setup.sh
community/chat-and-rag-glean/: README.md  nvidia_nim_langgraph_glean_example.ipynb  pyproject.toml
community/chat-and-rag-glean/glean_example/src/: agent.py  prompts.py
community/chat-and-rag-glean/glean_example/src/app/: app.py  css.py  style.css
community/chat-and-rag-glean/glean_example/src/glean_utils/: test_glean_search.py  utils.py
industries/asset_lifecycle_management_agent/: .cursor.rules.md  .gitignore  INSTALLATION.md  MCP_TOOL_PROPOSAL.md  README.md  UPGRADE_SUMMARY.md  config_examples.yaml  env_template.txt  prompts.md  pyproject.toml  setup_database.py  test_alm_workflow.py  vanna_training_data.yaml
industries/asset_lifecycle_management_agent/configs/: README.md  config-reasoning-tesseract.yaml  config-reasoning.yaml  config-reasoning.yml
industries/asset_lifecycle_management_agent/eval_data/: eval_set_master.json  eval_set_test.json
industries/asset_lifecycle_management_agent/example_eval_output/: multimodal_eval_output.json  workflow_output.json
industries/asset_lifecycle_management_agent/frontend/: README.md  app.js  package-lock.json  package.json  server.js  styles.css
industries/asset_lifecycle_management_agent/imgs/: pdm_architecture_updated.drawio
industries/asset_lifecycle_management_agent/src/asset_lifecycle_management_agent/: __init__.py  register.py
industries/asset_lifecycle_management_agent/utils_template/: __init__.py  rul_utils.py
industries/energy/simulation-workflow-agent/sim_agent/: Dockerfile  Dockerfile.ocr  EXAMPLES.md  README.md  docker-compose.yml  processed_txt_files.md  pyproject.toml  requirements_rag.txt  sample.txt
industries/energy/simulation-workflow-agent/workflow_agent/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
industries/manufacturing/predictive_maintenance_agent/: .gitignore  README.md  dot.env  pyproject.toml  setup_database.py  test_pdm_workflow.py  vanna_training_data.yaml
industries/manufacturing/predictive_maintenance_agent/configs/: config-eval.yml  config-reasoning.yml  config.yml
industries/manufacturing/predictive_maintenance_agent/eval_data/: eval_mini_retrieval_only.json  eval_mini_viz_only.json  eval_set_master.json  eval_set_retrieval_only.json  eval_set_test.json  eval_set_viz_only.json
industries/manufacturing/predictive_maintenance_agent/eval_output/: example_multimodal_eval_output.json  final_answer_eval_output.json  multimodal_eval_output.json  workflow_output.json
industries/manufacturing/predictive_maintenance_agent/models/: scaler_model.pkl  xgb_model_fd001.pkl
nemo/Evaluator/Custom LLM-as-a-Judge/: README.md  doctor_consults_with_summaries.jsonl  llm-as-a-judge-notebook.ipynb  pyproject.toml
nemo/Evaluator/Live Evaluation/: README.md  docker_compose.yaml  live_evaluation.ipynb  pyproject.toml
nemo/Evaluator/Live Evaluation/init_scripts/: create_databases.sh
nemo/NeMo-Data-Designer/: README.md  TUTORIAL_STYLE_GUIDE.md  pyproject.toml
nemo/NeMo-Data-Designer/advanced/forms/: w2-dataset.ipynb
nemo/NeMo-Data-Designer/advanced/healthcare-datasets/: clinical-trials.ipynb  insurance-claims.ipynb  physician-notes-with-realistic-personal-details.ipynb
nemo/NeMo-Data-Designer/advanced/multi-turn-chat/: multi-turn-conversation.ipynb
nemo/NeMo-Data-Designer/advanced/multimodal/: visual-question-answering-using-vlm.ipynb
nemo/NeMo-Data-Designer/advanced/person-samplers/: person-sampler-tutorial.ipynb
nemo/NeMo-Data-Designer/advanced/qa-generation/: product-question-answer-generator.ipynb
nemo/NeMo-Data-Designer/advanced/rag-examples/: generate-rag-evaluation-dataset.ipynb  generate-rag-generation-eval-dataset.ipynb
nemo/NeMo-Data-Designer/advanced/reasoning/: reasoning-traces.ipynb
nemo/NeMo-Data-Designer/advanced/text-to-code/: helpers.py  text-to-python-evol.ipynb  text-to-python.ipynb  text-to-sql.ipynb
nemo/NeMo-Data-Designer/community-contributions/RAG/: generate-rag-evaluation-dataset.ipynb
nemo/NeMo-Data-Designer/community-contributions/rag/: generate-rag-evaluation-dataset.ipynb
nemo/NeMo-Data-Designer/data/: gretelai_symptom_to_diagnosis.csv
nemo/NeMo-Data-Designer/intro-tutorials/: 1-the-basics.ipynb  2-structured-outputs-and-jinja-expressions.ipynb  3-seeding-with-a-dataset.ipynb  4-custom-model-configs.ipynb
nemo/NeMo-Data-Designer/managed-service-tutorials/getting-started/: 1-the-basics.ipynb  2-structured-outputs-and-jinja-expressions.ipynb  3-seeding-with-a-dataset.ipynb  4-custom-model-configs.ipynb
nemo/NeMo-Data-Designer/rag/: generate-rag-evaluation-dataset.ipynb
nemo/NeMo-Data-Designer/self-hosted-tutorials/community-contributions/: README.md
nemo/NeMo-Data-Designer/self-hosted-tutorials/getting-started/: 1-the-basics.ipynb  2-structured-outputs-and-jinja-expressions.ipynb  3-seeding-with-a-dataset.ipynb  README.md
nemo/NeMo-Data-Designer/tutorial_helpers/: helpers.py
oss_tutorials/Kimi_K2.5_Paper_to_Page_Vision_Workflow/: .env.example  Kimi K2.5 Visual Agentic Intelligence Technical Report.html  README.md  kimi_vision_paper_to_page_workflow.ipynb  pyproject.toml
(+2609 files in other folders)
