[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[project]
name = "predictive_maintenance_agent"
version = "0.1.0"
dependencies = [
  "aiqtoolkit[profiling, langchain, telemetry]",
  "pydantic ~= 2.10.0, <2.11.0",
  "vanna",
  "chromadb",
  "xgboost"
]
requires-python = ">=3.11,<3.13"
description = "Predictive maintenance workflow using AIQ"
classifiers = ["Programming Language :: Python"]
authors = [{ name = "Vineeth Kalluru" }]
maintainers = [{ name = "NVIDIA Corporation" }]

[project.entry-points.'aiq.components']
predictive_maintenance_agent = "predictive_maintenance_agent.register"

[tool.uv.sources]
aiqtoolkit = { path = "/Users/vikalluru/Documents/NeMo-Agent-Toolkit", editable = true }
aiqtoolkit-langchain = { path = "/Users/vikalluru/Documents/NeMo-Agent-Toolkit/packages/aiqtoolkit_langchain", editable = true }
aiqtoolkit-opentelemetry = { path = "/Users/vikalluru/Documents/NeMo-Agent-Toolkit/packages/aiqtoolkit_opentelemetry", editable = true }
aiqtoolkit-phoenix = { path = "/Users/vikalluru/Documents/NeMo-Agent-Toolkit/packages/aiqtoolkit_phoenix", editable = true }
aiqtoolkit-weave = { path = "/Users/vikalluru/Documents/NeMo-Agent-Toolkit/packages/aiqtoolkit_weave", editable = true }
aiqtoolkit-ragaai = { path = "/Users/vikalluru/Documents/NeMo-Agent-Toolkit/packages/aiqtoolkit_ragaai", editable = true }

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that run full workflows",
]
testpaths = [
    ".",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
