[project]
name = "tool-calling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.5.0",
    "huggingface-hub>=0.30.2",
    "jinja2>=3.1.0",
    "jsonschema>=4.23.0",
    "jupyterlab>=4.4.1",
    "litellm>=1.67.1",
    "openai>=1.76.0",
    "peft>=0.15.2",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "trl>=0.16.1",
]
