[project]
name = "live-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.5.0",
    "huggingface-hub>=0.30.2",
    "jinja2>=3.1.0",
    "jsonschema>=4.23.0",
    "jupyterlab>=4.4.1",
    "nemo-microservices>=1.0.1",
    "openai>=1.76.0",
]
