[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow_agent"
version = "0.1.0"
description = "Agentic reservoir optimization workflow (Phase 1–3: analysis, evolution, final run)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
    "rich>=13.0",
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "langgraph>=0.0.46",
]

[project.optional-dependencies]
nvidia = ["langchain-nvidia-ai-endpoints", "langchain-core"]
rag = ["chromadb", "sentence-transformers"]

[project.scripts]
agentic-workflow = "workflow_agent.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
